spa-title-wizard/deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa-title-wizard
  namespace: spahost-dev-app
  labels:
    app: spa-title-wizard
    app.kubernetes.io/name: spa-title-wizard
    app.kubernetes.io/part-of: software-delivery-automation
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: spa-title-wizard
